# Orix

./: .gitignore  README.md  pyproject.toml
Orix/: orix.py
orix.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
orix/core/: cli.py  orchestrator.py  plugin_manager.py  renderer.py  ui.py
orix/plugins/: django.py  fastapi.py  react.py
orix/sdk/: base.py
orix/templates/django/: manage.py
orix/templates/django/project_config/: settings.py
orix/templates/fastapi/: requirements.txt
orix/templates/fastapi/app/: main.py
orix/templates/react/: package.json
orix/templates/react/public/: index.html
orix/templates/react/src/: App.js
tests/: test_core.py
